--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -233,8 +233,13 @@
         <item quantity="other">%d selected</item>
     </plurals>
 
+    <!-- Formatting help -->
+
     <string name="formatting_help_title" translatable="false"># %1$s</string>
+    <string name="formatting_help_title_level_3" translatable="false">### %1$s</string>
     <string name="formatting_help_divider" translateable="false">---</string>
+    <string name="formatting_help_codefence_inline" translateable="false">`</string>
+    <string name="formatting_help_codefence_inline_escaped" translateable="false">\\`</string>
     <string name="formatting_help_codefence" translateable="false">```</string>
     <string name="formatting_help_codefence_escaped" translatable="false">\\`\\`\\`</string>
     <string name="formatting_help_javascript_1" translatable="false">if (isAwesome){</string>
@@ -242,6 +247,12 @@
     <string name="formatting_help_javascript_3" translatable="false">}</string>
     <string name="formatting_help_codefence_javascript_escaped" translatable="false">\\`\\`\\`javascript</string>
     <string name="formatting_help_codefence_javascript" translateable="false">```javascript</string>
+    <string name="formatting_help_code_javascript_inline" translatable="false">var example = true</string>
+    <string name="formatting_help_ol" translatable="false">%1$d. %2$s</string>
+    <string name="formatting_help_ul" translatable="false">- %1$s</string>
+    <string name="formatting_help_checkbox_checked" translatable="false">- [x] %1$s</string>
+    <string name="formatting_help_checkbox_unchecked" translatable="false">- [ ] %1$s</string>
+    <string name="formatting_help_quote" translatable="false">&gt; %1$s</string>
 
     <string name="formatting_help_cbf_title">Context based formatting</string>
     <string name="formatting_help_cbf_body_1">A major design goal of the Notes app is to provide a distraction free tool. Though you will be able to format your texts with Markdown. For various of the below mentioned examples, you can use shortcuts so you can format your notes without typing in the codes below.</string>
@@ -252,41 +263,36 @@
 
     <string name="formatting_help_lists_title">Lists</string>
     <string name="formatting_help_lists_body_1">Sometimes you want numbered lists:</string>
-    <string name="formatting_help_lists_body_2">1. One</string>
-    <string name="formatting_help_lists_body_3">2. Two</string>
-    <string name="formatting_help_lists_body_4">3. Three</string>
+    <string name="formatting_help_lists_body_2">One</string>
+    <string name="formatting_help_lists_body_3">Two</string>
+    <string name="formatting_help_lists_body_4">Three</string>
     <string name="formatting_help_lists_body_5">Sometimes you want bullet points:</string>
-    <string name="formatting_help_lists_body_6">* Start a line with a star</string>
-    <string name="formatting_help_lists_body_7">* Profit!</string>
-    <string name="formatting_help_lists_body_8">Alternatively,</string>
-    <string name="formatting_help_lists_body_9">- Dashes work just as well</string>
-    <string name="formatting_help_lists_body_10">- And if you have sub points, put two spaces before the dash or star:</string>
-    <string name="formatting_help_lists_body_11">- Like this</string>
-    <string name="formatting_help_lists_body_12">- And this</string>
+    <string name="formatting_help_lists_body_6">Start a line with a dash</string>
+    <string name="formatting_help_lists_body_7">And if you have sub points, put two spaces before the dash or star:</string>
+    <string name="formatting_help_lists_body_8">Like this</string>
+    <string name="formatting_help_lists_body_9">And this</string>
 
     <string name="formatting_help_checkboxes_title">Checkboxes</string>
     <string name="formatting_help_checkboxes_body_1">To create a checkbox, use a list followed by brackets</string>
-    <string name="formatting_help_checkboxes_body_2">- [ ] Item 1</string>
-    <string name="formatting_help_checkboxes_body_3">* [ ] Item 2</string>
+    <string name="formatting_help_checkboxes_body_2">Item 1</string>
+    <string name="formatting_help_checkboxes_body_3">Item 2</string>
 
     <string name="formatting_help_structured_documents_title">Structured documents</string>
     <string name="formatting_help_structured_documents_body_1">Sometimes it\'s useful to have different levels of headings to structure your documents. Start lines with a `#` to create headings. Multiple `##` in a row denote smaller heading sizes.</string>
-    <string name="formatting_help_structured_documents_body_2">### This is a third-tier heading</string>
+    <string name="formatting_help_structured_documents_body_2">This is a third-tier heading</string>
     <string name="formatting_help_structured_documents_body_3">You can use one `#` all the way up to `######` six for different heading sizes.</string>
     <string name="formatting_help_structured_documents_body_4">If you\'d like to quote someone, use the > character before the line:</string>
-    <string name="formatting_help_structured_documents_body_5">> Coffee. The finest organic suspension ever devised… I beat the Borg with it.</string>
-    <string name="formatting_help_structured_documents_body_6">> - Captain Janeway</string>
+    <string name="formatting_help_structured_documents_body_5">Coffee. The finest organic suspension ever devised… I beat the Borg with it.</string>
+    <string name="formatting_help_structured_documents_body_6">- Captain Janeway</string>
 
     <string name="formatting_help_code_title">Code</string>
     <string name="formatting_help_code_body_1">There are many different ways to style code with Markdown. If you have inline code blocks, wrap them in backticks:</string>
-    <string name="formatting_help_code_body_2">\\`var example = true\\`</string>
-    <string name="formatting_help_code_body_3">`var example = true`</string>
-    <string name="formatting_help_code_body_4">Markdown also supports something called code fencing, which allows for multiple lines without indentation:</string>
-    <string name="formatting_help_code_body_5">And if you\'d like to use syntax highlighting, include the language:</string>
+    <string name="formatting_help_code_body_2">Markdown also supports something called code fencing, which allows for multiple lines without indentation:</string>
+    <string name="formatting_help_code_body_3">And if you\'d like to use syntax highlighting, include the language:</string>
 
     <string name="formatting_help_unsupported_title">Unsupported</string>
     <string name="formatting_help_unsupported_body_1">While we try to continuously improve the support for Markdown, there are a few features which are not yet supported by Notes:</string>
-    <string name="formatting_help_unsupported_body_2">- Tables</string>
-    <string name="formatting_help_unsupported_body_3">- Images</string>
+    <string name="formatting_help_unsupported_body_2">Tables</string>
+    <string name="formatting_help_unsupported_body_3">Images</string>
     <string name="formatting_help_unsupported_body_4">If you are interested in contributing support for one of those features, get in contact with us via GitHub or E-Mail.</string>
 </resources>
