Add beta hint to grid view preference

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -192,7 +192,7 @@
     <string name="shared_text_empty">Shared text was empty</string>
     <string name="append_to_note">Append to note</string>
     <string name="settings_branding">Branding</string>
-    <string name="settings_gridview">Grid view</string>
+    <string name="settings_gridview">Grid view 🆕</string>
     <string name="simple_security">Security</string>
     <string name="simple_appearance">Appearance</string>
     <string name="simple_synchronization">Synchronization</string>
