--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -298,4 +298,6 @@
     <string name="formatting_help_unsupported_body_3">Images</string>
     <string name="formatting_help_unsupported_body_4">If you are interested in contributing support for one of those features, get in contact with us via GitHub or E-Mail.</string>
     <string name="simple_other">Other</string>
+    <string name="sort_last_modified">Sort by modified date</string>
+    <string name="sort_alphabetically">Sort by alphabet</string>
 </resources>
