--- a/markdown/src/main/res/values/strings.xml
+++ b/markdown/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="simple_bold">Bold</string>
     <string name="simple_link">Link</string>
     <string name="simple_italic">Italic</string>
+    <string name="could_not_toggle_checkbox">Could not toggle checkbox.</string>
 </resources>
