Fix #989 -️️ Display confirm dialog when deleting an account with unsynchronized changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="action_sorting_method">Sorting method</string>
     <string name="simple_cancel">Cancel</string>
     <string name="simple_edit">Edit</string>
+    <string name="simple_remove">Remove</string>
     <string name="action_edit_save">Save</string>
     <string name="simple_about">About</string>
     <string name="simple_link">Link</string>
@@ -298,4 +299,11 @@
     <string name="no_other_accounts">You don\'t have configured any other accounts yet.</string>
     <string name="choose_account">Choose account</string>
     <string name="context_based_formatting">Context based formatting popover</string>
+
+
+    <plurals name="remove_account_message">
+        <item quantity="one">Removing the account %1$s will also delete one unsynchronized change irrecoverable.</item>
+        <item quantity="other">Removing the account %1$s will also delete %2$d unsynchronized changes irrecoverable.</item>
+    </plurals>
+    <string name="remove_account">Remove %1$s</string>
 </resources>
