--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -299,11 +299,11 @@
     <string name="no_other_accounts">You don\'t have configured any other accounts yet.</string>
     <string name="choose_account">Choose account</string>
     <string name="context_based_formatting">Context based formatting popover</string>
-
-
     <plurals name="remove_account_message">
         <item quantity="one">Removing the account %1$s will also delete one unsynchronized change irrecoverable.</item>
         <item quantity="other">Removing the account %1$s will also delete %2$d unsynchronized changes irrecoverable.</item>
     </plurals>
     <string name="remove_account">Remove %1$s</string>
+
+    <string name="you_have_to_be_connected_to_the_internet_in_order_to_add_an_account">You have to be connected to the internet in order to add an account.</string>
 </resources>
