--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -303,4 +303,6 @@
     <string name="remove_account">Remove %1$s</string>
 
     <string name="you_have_to_be_connected_to_the_internet_in_order_to_add_an_account">You have to be connected to the internet in order to add an account.</string>
+    <string name="simple_next">next</string>
+    <string name="simple_prev">Previous</string>
 </resources>
